fixed team viewing issue on mobile

--- a/styles.css
+++ b/styles.css
@@ -45,24 +45,21 @@ h1 {
 }
 
 .break {
-    h1: 65px;
-    p: 16px;
     text-align: center;
     color: black;
-    height: 50%;
+    height: 70%;
     width: 100%;
-    padding: 10px;
-    vertical-align: top;
+    padding-top: 10px;
     background-color: rgba(255, 255, 255, 1.0);
 }
 
 .third {
-    display: block;
+    display: inline-block;
     margin-left: auto;
     margin-right: auto;
     background-color: rgba(204, 204, 204, 0.5);
     width: 100%;
-    height: 254px;
+    min-height: 10%;
 }
 
 
@@ -192,6 +189,7 @@ a {
   margin-right: auto;
   width: 70%;
   padding-top: 20px;
+  height: 100px;
 }
 
 a.aboutlink {
